--- a/major.html
+++ b/major.html
@@ -3,24 +3,72 @@
     background-color: #333;
     color: white;
     font-family: 'Courier New', Courier, monospace;
+    text-align: center;
   }
   #root {
-    width: 800px;
+    display: inline-block;
+    text-align: left;
+    min-width: 800px;
     padding-top: 80px;
     margin: auto;
+  }
+  #grid {
+    display: flex;
+    color: #888;
+  }
+  .column {
+    display: flex;
+    flex-direction: column;
+  }
+  .cell {
+    white-space: pre;
+    padding: 8px 12px 0px;
+    height: 1.25rem;
+  }
+  .card {
+    color: white;
   }
 </style>
 
 <div id="root">
+  <div id="grid"></div>
   <pre id="pre"></pre>
-  
 </div>
 
 <script type="module">
-  const response = await fetch("http://localhost:8055/items/major_names")
+  const HTML = (strings, ...args) => {
+    const str = args.map((arg, i) => strings[i] + arg).concat(strings[args.length]).join("")
+    const parser = new DOMParser()
+    const doc = parser.parseFromString(str, "text/html")
+    const node = doc.body.firstChild
+    return node
+  }
+  // https://directus.example.com/items/articles?fields=id,title,author.first_name&filter[author][first_name][_eq]=Robert
+  const response = await fetch("http://localhost:8055/items/major_names?filter[in_use][_eq]=true")
   const json = await response.json()
   const names = json.data
   const inUse = names.filter(name => name.in_use)
-  pre.innerHTML = JSON.stringify(inUse, null, 2)
+  // pre.innerHTML = JSON.stringify(inUse, null, 2)
+
+  const suits = ["♧", "♢", "♡", "♤"];
+  // const suits = ["♣️", "♦️", "♥️", "♠️"];
+
+  for (let i = 0; i < 10; i++) {
+    const column = HTML`<div class="column"></div>`;
+    grid.appendChild(column)
+    for (let j = 0; j < 10; j++) {
+      const int = (i * 10 + j) + 1
+      let digits = String(int)
+      if (digits === "100") digits = "00"
+      if (digits.length === 1) digits = "0" + digits
+      const name = inUse.find(name => name.major_code === digits);
+      const number = int % 20
+      const suit = Math.floor(int / 20)
+      const suitSymbol = number >= 1 && number <= 13 ? suits[suit] : null
+      column.appendChild(HTML`
+        <span class="cell ${suitSymbol ? "card" : ""}">${suitSymbol ?? " "} <b>${digits}</b>: ${name?.major_name ?? "?"}</span>
+      `)
+    }
+  }
 </script>
 
